--- a/SCME.UI/PagesTech/BvtPage.xaml
+++ b/SCME.UI/PagesTech/BvtPage.xaml
@@ -12,7 +12,13 @@
       Name="bvtPage" Title="{x:Static res:Resources.Bvt}">
 
     <Page.Resources>
-        <ui:BvtTestTypeToVisibilityConverter x:Key="TT2V" />
+
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/ScrollBar.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+            
+            <ui:BvtTestTypeToVisibilityConverter x:Key="TT2V" />
         <ui:MultiBvtRSMTestTypeToVisibilityConverter x:Key="MBvtRSMTT2V"/>
         <ui:EnumValueToString x:Key="E2S" />
         <ui:FrequencyDivisorToFrequency x:Key="FD2F" />
@@ -43,16 +49,15 @@
             <Setter Property="HorizontalContentAlignment" Value="Center" />
         </Style>
 
-        <Style TargetType="{x:Type Button}" BasedOn="{StaticResource PrimaryButton}">
-            <Setter Property="Margin" Value="10,0" />
-        </Style>
+            <Style TargetType="{x:Type Button}" BasedOn="{StaticResource PrimaryButton}">
+            </Style>
 
         <Style TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CCheckBoxStyle}">
             <Setter Property="Foreground" Value="{StaticResource xBlack1}" />
             <Setter Property="Padding" Value="0,0" />
         </Style>
 
-        <Style x:Key="ScrollBarThumb" TargetType="{x:Type Thumb}">
+        <!--<Style x:Key="ScrollBarThumb" TargetType="{x:Type Thumb}">
             <Setter Property="OverridesDefaultStyle" Value="True" />
             <Setter Property="Background" Value="Red" />
             <Setter Property="IsTabStop" Value="False" />
@@ -180,7 +185,9 @@
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
-        </Style>
+        </Style>-->
+
+        </ResourceDictionary>
     </Page.Resources>
 
     <Grid>
@@ -204,13 +211,13 @@
             <dynamicDataDisplay:VerticalAxisTitle Content="{x:Static res:Resources.Graph_ImA}" />
             <dynamicDataDisplay:AxisGrid Visibility="Hidden" />
         </dynamicDataDisplay:ChartPlotter>
-        <ScrollViewer x:Name="ScrollViewer" Grid.Column="3" Grid.Row="0" Style="{StaticResource ScrollViewerStyle}"  >
-            <Border Name="borderParams" Margin="50,0,0,0">
+        <ScrollViewer x:Name="ScrollViewer" Grid.Column="3" Grid.Row="0" Style="{StaticResource DefaultScrollViewer}"  >
+            <Border Name="borderParams" Margin="0,0,5,0">
                 <Grid Margin="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto" />
                         <ColumnDefinition Width="Auto" />
-                        <ColumnDefinition Width="50"/>
+                        <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
@@ -346,29 +353,21 @@
               X1="0" Y1="0" X2="0" Y2="{Binding ElementName=borderParams, Path=ActualHeight}"
               Grid.Column="3" Grid.Row="0" Margin="0,20,0,20" />
 
-        <Grid Grid.Row="1" Grid.ColumnSpan="4">
+        <Grid Grid.Row="2" Grid.ColumnSpan="4" Margin="0,0,-10,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto" />
                 <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="auto" />
                 <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="auto" />
             </Grid.ColumnDefinitions>
 
-            <Button x:Name="btnBack" Grid.Column="0" Grid.Row="2" x:FieldModifier="private" Margin="6" Style="{StaticResource BackButton}"   VerticalAlignment="Bottom"             
-                Content="{x:Static res:Resources.Back}"
-                Click="btnBack_OnClick"/>
-
-            <Button x:Name="btnTemperature" Grid.Column="1" Grid.Row="2" x:FieldModifier="private" Margin="6"    VerticalAlignment="Bottom"           
-                Content="{x:Static res:Resources.SetTemp}"
-                Click="btnTemperature_OnClick"/>
-
-            <Button Grid.Column="2" Grid.Row="2" Margin="6" Background="{StaticResource xRed1}" VerticalAlignment="Bottom"
-                Content="{x:Static res:Resources.Stop}"
-                Click="btnStop_OnClick"/>
-
-            <Button x:Name="btnStart" Grid.Column="3" Grid.Row="2" HorizontalAlignment="Right" x:FieldModifier="private" Margin="6" Background="{StaticResource xGreen1}" VerticalAlignment="Bottom"
-                Content="{x:Static res:Resources.Start}" 
-                Click="btnStart_OnClick"/>
+            <Button Grid.Column="0" VerticalAlignment="Bottom" Content="{x:Static res:Resources.Back}" x:Name="btnBack" Click="btnBack_OnClick" />
+            <Button Grid.Column="2" VerticalAlignment="Bottom" Content="{x:Static res:Resources.SetTemp}" x:Name="btnTemperature" Click="btnTemperature_OnClick"/>
+            <Button Grid.Column="4" VerticalAlignment="Bottom" Content="{x:Static res:Resources.Stop}" Background="{StaticResource xRed1}" Click="btnStop_OnClick" />
+            <Button Grid.Column="6" VerticalAlignment="Bottom" Content="{x:Static res:Resources.Start}" Background="{StaticResource xGreen1}" x:Name="btnStart" Click="btnStart_OnClick"/>
         </Grid>
     </Grid>
 </Page>
